Updated metrics